--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="container">
-      <nav>
+    <div class="container main-nav">
+      <nav class="link-nav">
         <a href="./index.html" class="logo-web link">WEB<span class="head-studio">STUDIO</span>
         </a>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="anchors link">Studio</a></li>
-          <li>
+          <li class="item"><a href="./index.html" class="anchors link">Studio</a></li>
+          <li class="item">
             <a href="./portfolio.html" class="anchors link">Portfolio</a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="anchors link">Contacts</a>
           </li>
         </ul>
       </nav>
       <ul class="head-content list">
-        <li>
+        <li class="item">
           <a href="mailto:info@devstudio.com" class="relations link">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="item">
           <a href="tel:+110001111111" class="relations link">+11 (000) 111-11-11</a>
         </li>
       </ul>
@@ -45,36 +45,36 @@
   <main>
     <!-- Hero-->
     <section class="hero">
-      <h1 class="hero-title container">Effective Solutions for Your Business</h1>
+      <h1 class="hero-title container">Effective Solutions<br>for Your Business</h1>
       <button type="button" class="btn btn-hero">Order Service</button>
     </section>
 
     <!-- Studio / Description of studio -->
-    <section class="section container">
-      <h2 class="section-title">Description of studio</h2>
-      <ul class="list">
-        <li class="list">
+    <section class="section container main-desc">
+      <h2 class="section-title hide-text">Description of studio</h2>
+      <ul class="list desc">
+        <li class="list item">
           <h3 class="desc-title">Strategy</h3>
           <p class="desc-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </li>
-        <li class="list">
+        <li class="list item">
           <h3 class="desc-title">Punctuality</h3>
           <p class="desc-text">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
         </li>
-        <li class="list">
+        <li class="list item">
           <h3 class="desc-title">Diligence</h3>
           <p class="desc-text">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </li>
-        <li class="list">
+        <li class="list item">
           <h3 class="desc-title">Technologies</h3>
           <p class="desc-text">
             Design practice focused on digital experiences. We bring forth a
@@ -87,15 +87,15 @@
     <!-- Portfolio / Description of the works of the studio -->
     <section class="section container">
       <h2 class="section-title">What Are We Doing</h2>
-      <ul class="list">
-        <li class="list">
+      <ul class="list prt">
+        <li class="list item">
           <img src="./images/work-01.jpg" alt="A monitor that shows a site made by the studio." width="360" />
         </li>
-        <li class="list">
+        <li class="list item">
           <img src="./images/work-02.jpg" alt="The phone on which the application made by the studio is shown."
             width="360" />
         </li>
-        <li class="list">
+        <li class="list item">
           <img src="./images/work-03.jpg" alt="In the foreground is a phone showing a website made
             by the studio, in the background is a computer screen with an image
             of the Figma workspace." width="360" />
@@ -107,7 +107,7 @@
     <section class="section-team">
       <div class="container">
         <h2 class="section-title team">Our Team</h2>
-        <ul>
+        <ul class="main-cont">
           <li class="list team">
             <img src="./images/team-01.jpg" alt="Man in a blue shirt smiling in the camera." width="264" />
             <h3 class="team-title">Mark Guerrero</h3>
@@ -135,7 +135,8 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <a href="./index.html" class="logo-web link">WEB<span class="footer-studio">STUDIO</span></a>
+      <p class="foot-logo"><a href="./index.html" class="logo-web link">WEB<span class="footer-studio">STUDIO</span></a>
+      </p>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
