--- a/portfolio.html
+++ b/portfolio.html
@@ -16,25 +16,25 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="container">
-      <nav>
+    <div class="container main-nav">
+      <nav class="link-nav">
         <a href="./index.html" class="logo-web link">WEB<span class="head-studio">STUDIO</span>
         </a>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="anchors link">Studio</a></li>
-          <li>
+          <li class="item"><a href="./index.html" class="anchors link">Studio</a></li>
+          <li class="item">
             <a href="./portfolio.html" class="anchors link">Portfolio</a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="anchors link">Contacts</a>
           </li>
         </ul>
       </nav>
       <ul class="head-content list">
-        <li>
+        <li class="item">
           <a href="mailto:info@devstudio.com" class="relations link">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="item">
           <a href="tel:+110001111111" class="relations link">+11 (000) 111-11-11</a>
         </li>
       </ul>
@@ -46,17 +46,17 @@
     <section class="section container">
       <h1 class="section-title prt">Filter buttons</h1>
       <ul class="btn-prt list">
-        <li><button type="button" class="btn btn-filters">All</button></li>
-        <li>
+        <li class="btn-item"><button type="button" class="btn btn-filters">All</button></li>
+        <li class="btn-item">
           <button type="button" class="btn btn-filters">Web Site</button>
         </li>
-        <li><button type="button" class="btn btn-filters">App</button></li>
-        <li><button type="button" class="btn btn-filters">Design</button></li>
-        <li>
+        <li class="btn-item"><button type="button" class="btn btn-filters">App</button></li>
+        <li class="btn-item"><button type="button" class="btn btn-filters">Design</button></li>
+        <li class="btn-item">
           <button type="button" class="btn btn-filters">Marketing</button>
         </li>
       </ul>
-      <ul class="list">
+      <ul class="list main-filter">
         <li class="filter app">
           <a href="" class="link"><img src="./images/prt-01.jpg"
               alt="Images of different pages of the banking application in blue tints." width="360" />
@@ -129,7 +129,8 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <a href="./index.html" class="logo-web link">WEB<span class="footer-studio">STUDIO</span></a>
+      <p class="foot-logo"><a href="./index.html" class="logo-web link">WEB<span class="footer-studio">STUDIO</span></a>
+      </p>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
