откорректировал все недочёты

--- a/index.html
+++ b/index.html
@@ -46,88 +46,102 @@
   <main>
     <!-- Hero-->
     <section class="hero">
-      <h1 class="hero-title container">Effective Solutions<br>for Your Business</h1>
-      <button type="button" class="btn btn-hero">Order Service</button>
+      <div class="container">
+        <h1 class="hero-title">Effective Solutions<br>for Your Business</h1>
+        <button type="button" class="btn btn-hero">Order Service</button>
+      </div>
     </section>
 
     <!-- Studio / Description of studio -->
-    <section class="section container main-desc">
-      <h2 class="section-title hide-text">Description of studio</h2>
-      <ul class="list desc">
-        <li class="list item">
-          <h3 class="desc-title">Strategy</h3>
-          <p class="desc-text">
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li class="list item">
-          <h3 class="desc-title">Punctuality</h3>
-          <p class="desc-text">
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li class="list item">
-          <h3 class="desc-title">Diligence</h3>
-          <p class="desc-text">
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li class="list item">
-          <h3 class="desc-title">Technologies</h3>
-          <p class="desc-text">
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
+    <section class="section main-desc">
+      <div class="container">
+        <h2 class="section-title hide-text">Description of studio</h2>
+        <ul class="list desc">
+          <li class="list item">
+            <h3 class="desc-title">Strategy</h3>
+            <p class="desc-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="list item">
+            <h3 class="desc-title">Punctuality</h3>
+            <p class="desc-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="list item">
+            <h3 class="desc-title">Diligence</h3>
+            <p class="desc-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="list item">
+            <h3 class="desc-title">Technologies</h3>
+            <p class="desc-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- Portfolio / Description of the works of the studio -->
-    <section class="section container">
-      <h2 class="section-title">What Are We Doing</h2>
-      <ul class="list prt">
-        <li class="list item">
-          <img src="./images/work-01.jpg" alt="A monitor that shows a site made by the studio." width="360" />
-        </li>
-        <li class="list item">
-          <img src="./images/work-02.jpg" alt="The phone on which the application made by the studio is shown."
-            width="360" />
-        </li>
-        <li class="list item">
-          <img src="./images/work-03.jpg" alt="In the foreground is a phone showing a website made
+    <section class="section main-prt">
+      <div class="container">
+        <h2 class="section-title">What Are We Doing</h2>
+        <ul class="list prt">
+          <li class="list item">
+            <img src="./images/work-01.jpg" alt="A monitor that shows a site made by the studio." width="360" />
+          </li>
+          <li class="list item">
+            <img src="./images/work-02.jpg" alt="The phone on which the application made by the studio is shown."
+              width="360" />
+          </li>
+          <li class="list item">
+            <img src="./images/work-03.jpg" alt="In the foreground is a phone showing a website made
             by the studio, in the background is a computer screen with an image
             of the Figma workspace." width="360" />
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- Contacts / Main team of studio -->
-    <section class="section-team">
+    <section class="section main-team">
       <div class="container">
         <h2 class="section-title team">Our Team</h2>
         <ul class="main-cont">
           <li class="list team">
             <img src="./images/team-01.jpg" alt="Man in a blue shirt smiling in the camera." width="264" />
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
+            <div class="cont-text">
+              <h3 class="team-title">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </div>
           </li>
           <li class="list team">
             <img src="./images/team-02.jpg" alt="Man in a blue shirt smiling looking to the side." width="264" />
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
+            <div class="cont-text">
+              <h3 class="team-title">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </div>
           </li>
           <li class="list team">
             <img src="./images/team-03.jpg" alt="A girl in a blue sweater smiling in the camera." width="264" />
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
+            <div class="cont-text">
+              <h3 class="team-title">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </div>
           </li>
           <li class="list team">
             <img src="./images/team-04.jpg" alt="Man in a gray t-shirt smililng in the camera." width="264" />
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
+            <div class="cont-text">
+              <h3 class="team-title">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
