--- a/portfolio.html
+++ b/portfolio.html
@@ -44,86 +44,106 @@
 
   <!-- Main content -->
   <main>
-    <section class="section container">
-      <h1 class="section-title prt">Filter buttons</h1>
-      <ul class="btn-prt list">
-        <li class="btn-item"><button type="button" class="btn btn-filters">All</button></li>
-        <li class="btn-item">
-          <button type="button" class="btn btn-filters">Web Site</button>
-        </li>
-        <li class="btn-item"><button type="button" class="btn btn-filters">App</button></li>
-        <li class="btn-item"><button type="button" class="btn btn-filters">Design</button></li>
-        <li class="btn-item">
-          <button type="button" class="btn btn-filters">Marketing</button>
-        </li>
-      </ul>
-      <ul class="list main-filter">
-        <li class="filter app">
-          <a href="" class="link"><img src="./images/prt-01.jpg"
-              alt="Images of different pages of the banking application in blue tints." width="360" />
-            <h2 class="prt-title">Banking App Interface Concept</h2>
-            <p class="prt-text">App</p>
-          </a>
-        </li>
-        <li class="filter marketing">
-          <a href="" class="link"><img src="./images/prt-02.jpg"
-              alt="A phone with a QR analyzer is applied to the terminal for payment with a QR code." width="360" />
-            <h2 class="prt-title">Cashless Payment</h2>
-            <p class="prt-text">Marketing</p>
-          </a>
-        </li>
-        <li class="filter app">
-          <a href="" class="link"><img src="./images/prt-03.jpg"
-              alt="Pictured is a smartphone and a laptop with an application presentation." width="360" />
-            <h2 class="prt-title">Mediation App</h2>
-            <p class="prt-text">App</p>
-          </a>
-        </li>
-        <li class="filter marketing">
-          <a href="" class="link"><img src="./images/prt-04.jpg"
-              alt="The hands of a taxi driver are shown on the steering wheel of a car, a phone with an application developed by WEBSTUDIO is fixed in front of him."
-              width="360" />
-            <h2 class="prt-title">Taxi Service</h2>
-            <p class="prt-text">Marketing</p>
-          </a>
-        </li>
-        <li class="filter design">
-          <a href="" class="link"><img src="./images/prt-05.jpg"
-              alt="Pictured is a phone with different kinds of wallpapers in the app." width="360" />
-            <h2 class="prt-title">Screen Illustrations</h2>
-            <p class="prt-text">Design</p>
-          </a>
-        </li>
-        <li class="filter marketing">
-          <a href="" class="link"><img src="./images/prt-06.jpg"
-              alt="A cute girl in a gray hat and orange sweater holds an earphone in her hand and smiles while looking at the phone screen."
-              width="360" />
-            <h2 class="prt-title">Online Courses</h2>
-            <p class="prt-text">Marketing</p>
-          </a>
-        </li>
-        <li class="filter design">
-          <a href="" class="link"><img src="./images/prt-07.jpg" alt="Various concepts for Instagram stories."
-              width="360" />
-            <h2 class="prt-title">Instagram Stories Concept</h2>
-            <p class="prt-text">Design</p>
-          </a>
-        </li>
-        <li class="filter web-site">
-          <a href="" class="link"><img src="./images/prt-08.jpg"
-              alt="The legs of a girl dressed in white can be seen carrying a mesh bag of fruit." width="360" />
-            <h2 class="prt-title">Organic Food</h2>
-            <p class="prt-text">Web Site</p>
-          </a>
-        </li>
-        <li class="filter web-site">
-          <a href="" class="link"><img src="./images/prt-09.jpg"
-              alt="A close-up shows a cup of coffee in which the bartender makes a pattern with milk." width="360" />
-            <h2 class="prt-title">Fresh Coffee</h2>
-            <p class="prt-text">Web Site</p>
-          </a>
-        </li>
-      </ul>
+    <section class="section prt-section">
+      <div class="container">
+        <h1 class="section-title prt-title">Filter buttons</h1>
+        <ul class="btn-prt list">
+          <li class="btn-item"><button type="button" class="btn btn-filters">All</button></li>
+          <li class="btn-item">
+            <button type="button" class="btn btn-filters">Web Site</button>
+          </li>
+          <li class="btn-item"><button type="button" class="btn btn-filters">App</button></li>
+          <li class="btn-item"><button type="button" class="btn btn-filters">Design</button></li>
+          <li class="btn-item">
+            <button type="button" class="btn btn-filters">Marketing</button>
+          </li>
+        </ul>
+        <ul class="list main-filter">
+          <li class="filter app">
+            <a href="" class="link"><img src="./images/prt-01.jpg"
+                alt="Images of different pages of the banking application in blue tints." width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Banking App Interface Concept</h2>
+                <p class="prt-text">App</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter marketing">
+            <a href="" class="link"><img src="./images/prt-02.jpg"
+                alt="A phone with a QR analyzer is applied to the terminal for payment with a QR code." width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Cashless Payment</h2>
+                <p class="prt-text">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter app">
+            <a href="" class="link"><img src="./images/prt-03.jpg"
+                alt="Pictured is a smartphone and a laptop with an application presentation." width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Mediation App</h2>
+                <p class="prt-text">App</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter marketing">
+            <a href="" class="link"><img src="./images/prt-04.jpg"
+                alt="The hands of a taxi driver are shown on the steering wheel of a car, a phone with an application developed by WEBSTUDIO is fixed in front of him."
+                width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Taxi Service</h2>
+                <p class="prt-text">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter design">
+            <a href="" class="link"><img src="./images/prt-05.jpg"
+                alt="Pictured is a phone with different kinds of wallpapers in the app." width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Screen Illustrations</h2>
+                <p class="prt-text">Design</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter marketing">
+            <a href="" class="link"><img src="./images/prt-06.jpg"
+                alt="A cute girl in a gray hat and orange sweater holds an earphone in her hand and smiles while looking at the phone screen."
+                width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Online Courses</h2>
+                <p class="prt-text">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter design">
+            <a href="" class="link"><img src="./images/prt-07.jpg" alt="Various concepts for Instagram stories."
+                width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Instagram Stories Concept</h2>
+                <p class="prt-text">Design</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter web-site">
+            <a href="" class="link"><img src="./images/prt-08.jpg"
+                alt="The legs of a girl dressed in white can be seen carrying a mesh bag of fruit." width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Organic Food</h2>
+                <p class="prt-text">Web Site</p>
+              </div>
+            </a>
+          </li>
+          <li class="filter web-site">
+            <a href="" class="link"><img src="./images/prt-09.jpg"
+                alt="A close-up shows a cup of coffee in which the bartender makes a pattern with milk." width="360" />
+              <div class="prt-block">
+                <h2 class="prt-title">Fresh Coffee</h2>
+                <p class="prt-text">Web Site</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
