--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,8 @@
         <ul class="list main-filter">
           <li class="filter app">
             <a href="" class="link"><img src="./images/prt-01.jpg"
-                alt="Images of different pages of the banking application in blue tints." width="360" />
+                alt="Images of different pages of the banking application in blue tints." width="360"
+                class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Banking App Interface Concept</h2>
                 <p class="prt-text">App</p>
@@ -70,7 +71,8 @@
           </li>
           <li class="filter marketing">
             <a href="" class="link"><img src="./images/prt-02.jpg"
-                alt="A phone with a QR analyzer is applied to the terminal for payment with a QR code." width="360" />
+                alt="A phone with a QR analyzer is applied to the terminal for payment with a QR code." width="360"
+                class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Cashless Payment</h2>
                 <p class="prt-text">Marketing</p>
@@ -79,7 +81,8 @@
           </li>
           <li class="filter app">
             <a href="" class="link"><img src="./images/prt-03.jpg"
-                alt="Pictured is a smartphone and a laptop with an application presentation." width="360" />
+                alt="Pictured is a smartphone and a laptop with an application presentation." width="360"
+                class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Mediation App</h2>
                 <p class="prt-text">App</p>
@@ -89,7 +92,7 @@
           <li class="filter marketing">
             <a href="" class="link"><img src="./images/prt-04.jpg"
                 alt="The hands of a taxi driver are shown on the steering wheel of a car, a phone with an application developed by WEBSTUDIO is fixed in front of him."
-                width="360" />
+                width="360" class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Taxi Service</h2>
                 <p class="prt-text">Marketing</p>
@@ -98,7 +101,8 @@
           </li>
           <li class="filter design">
             <a href="" class="link"><img src="./images/prt-05.jpg"
-                alt="Pictured is a phone with different kinds of wallpapers in the app." width="360" />
+                alt="Pictured is a phone with different kinds of wallpapers in the app." width="360"
+                class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Screen Illustrations</h2>
                 <p class="prt-text">Design</p>
@@ -108,7 +112,7 @@
           <li class="filter marketing">
             <a href="" class="link"><img src="./images/prt-06.jpg"
                 alt="A cute girl in a gray hat and orange sweater holds an earphone in her hand and smiles while looking at the phone screen."
-                width="360" />
+                width="360" class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Online Courses</h2>
                 <p class="prt-text">Marketing</p>
@@ -117,7 +121,7 @@
           </li>
           <li class="filter design">
             <a href="" class="link"><img src="./images/prt-07.jpg" alt="Various concepts for Instagram stories."
-                width="360" />
+                width="360" class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Instagram Stories Concept</h2>
                 <p class="prt-text">Design</p>
@@ -126,7 +130,8 @@
           </li>
           <li class="filter web-site">
             <a href="" class="link"><img src="./images/prt-08.jpg"
-                alt="The legs of a girl dressed in white can be seen carrying a mesh bag of fruit." width="360" />
+                alt="The legs of a girl dressed in white can be seen carrying a mesh bag of fruit." width="360"
+                class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Organic Food</h2>
                 <p class="prt-text">Web Site</p>
@@ -135,7 +140,8 @@
           </li>
           <li class="filter web-site">
             <a href="" class="link"><img src="./images/prt-09.jpg"
-                alt="A close-up shows a cup of coffee in which the bartender makes a pattern with milk." width="360" />
+                alt="A close-up shows a cup of coffee in which the bartender makes a pattern with milk." width="360"
+                class="display-block" />
               <div class="prt-block">
                 <h2 class="prt-title">Fresh Coffee</h2>
                 <p class="prt-text">Web Site</p>
